<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/lock_now_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_default_material"
        android:text="@string/lock_now"
        android:textColor="@android:color/white"
        android:theme="@style/GreenButtonTheme" />

    <CheckBox
        android:id="@+id/status_bar_check"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/lock_now_button"
        android:layout_centerHorizontal="true"
        android:text="@string/status_bar_lock" />

    <Button
        android:id="@+id/modify_admin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_default_material_important"
        android:text="@string/disable_admin"
        android:textColor="@android:color/white"
        android:theme="@style/RedButtonTheme"
        android:transitionName="button" />
</RelativeLayout>